agrege el logo de la institucion

--- a/interfaz_calificaciones.html
+++ b/interfaz_calificaciones.html
@@ -26,7 +26,7 @@
     <div class="main-content">
       <header>
         <h1>Calificaciones</h1>
-        <img src="img/icono.jpg" alt="Icono" class="w-10 h-10 rounded-full">
+        <img src="images/logo.png" alt="Icono" class="logo-image">
       </header>
 
       <main class="mt-6">
